--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "node_modules/jsdoc3"]
 	path = node_modules/jsdoc3
-	url = https://github.com/jsdoc3/jsdoc.git
+	url = https://github.com/danyg/jsdoc.git
