--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "node_modules/jsdoc3"]
 	path = node_modules/jsdoc3
 	url = https://github.com/danyg/jsdoc.git
+[submodule "node_modules/taffydb"]
+	path = node_modules/taffydb
+	url = https://github.com/danyg/taffydb.git
